#4 fix for overlapping letters on desktop

--- a/assets/src/css/scss/_timeline.scss
+++ b/assets/src/css/scss/_timeline.scss
@@ -173,8 +173,9 @@
   &.tml__text_wrap {
     padding-left: 0;
     top: 0;
+    padding-top: 0;
     display: block;
-    margin-top: -5px;
+    margin-top: -3px;
   }
 
   &.tml__text_mobile {
